# codecharacter-simulator-2019

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FindClangFormat.cmake  README.md  clang-format.cmake  docker_build.sh  key.txt.example  map.txt.example
.circleci/: config.yml  run-linter-check.sh  run-test-build.sh
cmake/: clang-format.cmake
docker/base/: Dockerfile
docker/compiler/: Dockerfile  compiler.sh
docker/debugger/: Dockerfile  debug-run.sh
docker/runner/: Dockerfile  runner.sh
docker/runner-debug/: Dockerfile  debug-run.sh
src/constants/: CMakeLists.txt
src/constants/include/constants/: constants.h  driver.h  gold_manager.h  instruction_limits.h  score_manager.h  state.h
src/drivers/: CMakeLists.txt
src/drivers/include/drivers/: game_result.h  main_driver.h  player_driver.h  player_result.h  timer.h  transfer_state.h
src/drivers/include/drivers/shared_memory_utils/: shared_buffer.h  shared_memory_main.h  shared_memory_player.h
src/drivers/src/: main_driver.cpp  player_driver.cpp  timer.cpp
src/drivers/src/shared_memory_utils/: shared_buffer.cpp  shared_memory_main.cpp  shared_memory_player.cpp
src/game/: CMakeLists.txt
src/game/include/game/: game.h
src/game/src/: game.cpp
src/llvm_pass/: CMakeLists.txt
src/llvm_pass/src/: inst_count_pass.cpp
src/logger/: CMakeLists.txt
src/logger/include/logger/: error_type.h  logger.h
src/logger/include/logger/interfaces/: i_logger.h
src/logger/src/: logger.cpp
src/main/: CMakeLists.txt  main.cpp
src/physics/: CMakeLists.txt
src/physics/include/physics/: vector.h  vector.hpp
src/physics/src/: vector.cpp  vector.hpp
src/player_code/: CMakeLists.txt
src/player_code/include/player_code/: player_code.h
src/player_code/include/player_code/test/: player_code_test_0.h  player_code_test_1.h  player_code_test_2.h
src/player_code/src/: player_code.cpp  template_code.cpp  template_code2.cpp
src/player_code/test/: player_code_test_0.cpp  player_code_test_1.cpp  player_code_test_2.cpp
src/player_wrapper/: CMakeLists.txt
src/player_wrapper/include/player_wrapper/: player_code_wrapper.h
src/player_wrapper/include/player_wrapper/interfaces/: i_player_code.h
src/player_wrapper/src/: player_code_wrapper.cpp
src/players/: CMakeLists.txt  player.cpp
src/simulator_constants/: CMakeLists.txt
src/simulator_constants/include/simulator_constants/: constants.h
src/state/: CMakeLists.txt
src/state/include/state/: build_request.h  command_giver.h  player_state.h  player_state_helpers.h  state.h  state_syncer.h  utilities.h
src/state/include/state/actor/: actor.fwd.h  actor.h  factory.fwd.h  factory.h  soldier.fwd.h  soldier.h  unit.h  villager.fwd.h  villager.h
src/state/include/state/actor/factory_states/: factory_dead_state.h  factory_idle_state.h  factory_production_state.h  factory_state.h  factory_unbuilt_state.h
src/state/include/state/actor/interfaces/: i_actor_state.h
src/state/include/state/actor/soldier_states/: attack_state.h  dead_state.h  idle_state.h  move_state.h  pursuit_state.h  soldier_attack_state.h  soldier_dead_state.h  soldier_idle_state.h  soldier_move_state.h  soldier_pursuit_state.h  soldier_state.h
src/state/include/state/actor/villager_states/: villager_attack_state.h  villager_build_state.h  villager_dead_state.h  villager_idle_state.h  villager_mine_state.h  villager_move_state.h  villager_move_to_build_state.h  villager_move_to_mine_state.h  villager_pursuit_state.h  villager_state.h
src/state/include/state/gold_manager/: gold_manager.h  gold_mine.h
src/state/include/state/interfaces/: i_command_giver.h  i_command_taker.h  i_gold_manager.h  i_state_syncer.h  i_updatable.h
src/state/include/state/map/: map.h
src/state/include/state/path_planner/: matrix.h  open_list.h  path_graph.h  path_planner.h
src/state/include/state/path_planner/interfaces/: i_path_planner.h
src/state/include/state/score_manager/: score_manager.h
src/state/src/: command_giver.cpp  state.cpp  state_helpers.cpp  state_syncer.cpp
src/state/src/actor/: actor.cpp  factory.cpp  soldier.cpp  unit.cpp  villager.cpp
src/state/src/actor/factory_states/: factory_dead_state.cpp  factory_idle_state.cpp  factory_production_state.cpp  factory_state.cpp  factory_unbuilt_state.cpp
src/state/src/actor/soldier_states/: attack_state.cpp  dead_state.cpp  idle_state.cpp  move_state.cpp  pursuit_state.cpp  soldier_attack_state.cpp  soldier_dead_state.cpp  soldier_idle_state.cpp  soldier_move_state.cpp  soldier_pursuit_state.cpp  soldier_state.cpp
src/state/src/actor/villager_states/: villager_attack_state.cpp  villager_build_state.cpp  villager_dead_state.cpp  villager_idle_state.cpp  villager_mine_state.cpp  villager_move_state.cpp  villager_move_to_build_state.cpp  villager_move_to_mine_state.cpp  villager_pursuit_state.cpp  villager_state.cpp
src/state/src/gold_manager/: gold_manager.cpp  gold_mine.cpp
src/state/src/map/: map.cpp
src/state/src/path_planner/: path_cache.cpp  path_graph.cpp  path_planner.cpp
src/state/src/score_manager/: score_manager.cpp
test/: CMakeLists.txt
test/drivers/: main_driver_test.cpp
test/drivers/shared_memory/: shm_test.cpp
test/llvm_pass/: llvm_pass_test.cpp
test/logger/: logger_test.cpp
test/logger/mocks/: logger_mock.h
test/physics/: vector_test.cpp
test/state/: command_giver_test.cpp  factory_test.cpp  gold_manager_test.cpp  map_test.cpp  path_planner_test.cpp  soldier_test.cpp  state_syncer_test.cpp  state_test.cpp  villager_test.cpp
test/state/mocks/: command_giver_mock.h  command_taker_mock.h  gold_manager_mock.h  state_mock.h  state_syncer_mock.h
